--- a/.github/workflows/test-languagetool.yml
+++ b/.github/workflows/test-languagetool.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       # Step 1: Checkout the repository
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       # Step 2: Install Homebrew (if not available)
       - name: Install Homebrew
@@ -34,13 +34,12 @@ jobs:
       # Step 3: Install Java (OpenJDK 17)
       - name: Install Java
         run: |
-          brew install openjdk@17
-          sudo ln -sfn /usr/local/opt/openjdk@17/libexec/openjdk.jdk /Library/Java/JavaVirtualMachines/openjdk-17.jdk
+          brew install --quiet openjdk@17
+          sudo ln -sfn $(brew --prefix)/opt/openjdk@17/libexec/openjdk.jdk /Library/Java/JavaVirtualMachines/openjdk-17.jdk
+          # Add Java to PATH
+          echo "$(brew --prefix)/opt/openjdk@17/bin" >> $GITHUB_PATH
           # Verify Java installation
-          if ! java -version &>/dev/null; then
-            echo "Java installation failed!"
-            exit 1
-          fi
+          java -version
           echo "Java successfully installed."
 
       # Step 4: Run install-languagetool.sh to test installation
@@ -52,39 +51,85 @@ jobs:
       # Step 5: Verify if LanguageTool server is running
       - name: Verify LanguageTool server is running
         run: |
-          curl -X POST http://localhost:8081/v2/check \
-            -d "text=Hello world" \
+          # Try multiple times with increasing wait times
+          MAX_ATTEMPTS=5
+          for i in $(seq 1 $MAX_ATTEMPTS); do
+            echo "Attempt $i of $MAX_ATTEMPTS to connect to LanguageTool server..."
+            if curl -s http://localhost:8081 > /dev/null; then
+              echo "✅ LanguageTool server is running!"
+              break
+            elif [ $i -eq $MAX_ATTEMPTS ]; then
+              echo "❌ Could not connect to LanguageTool server after $MAX_ATTEMPTS attempts"
+              echo "Checking server logs:"
+              cat /tmp/languagetool.out || true
+              cat /tmp/languagetool.err || true
+              exit 1
+            else
+              echo "Waiting before next attempt..."
+              sleep $(( i * 2 ))  # Increase wait time with each attempt
+            fi
+          done
+
+      # Step 6: Test the API with a simple request
+      - name: Test LanguageTool API
+        run: |
+          echo "Testing API with a text check..."
+          curl -X POST \
             -d "language=en-US" \
-            -H "Content-Type: application/x-www-form-urlencoded" || exit 1  # Exit with error if server is not running
+            -d "text=This is a test." \
+            http://localhost:8081/v2/check
+          echo
 
-      # Step 6: Stop any existing LanguageTool server
-      - name: Stop any existing LanguageTool server
+      # Step 7: Stop LanguageTool server gracefully
+      - name: Stop LanguageTool server
         run: |
-          pkill -f languagetool-server.jar || true
+          echo "Stopping LanguageTool server..."
+          if pgrep -f languagetool-server.jar > /dev/null; then
+            pkill -f languagetool-server.jar || true
+            # Wait to ensure process is terminated
+            sleep 2
+            # Force kill if still running
+            pkill -9 -f languagetool-server.jar 2>/dev/null || true
+            echo "LanguageTool server stopped."
+          else
+            echo "No running LanguageTool server found."
+          fi
 
-      # Step 7: Restart LanguageTool server
-      - name: Restart LanguageTool server
-        run: |
-          LANGUAGETOOL_SERVER_JAR="$HOME/.languagetool/LanguageTool-6.6/languagetool-server.jar"
-          nohup java -jar $LANGUAGETOOL_SERVER_JAR --port 8081 > /dev/null 2>&1 &
-          echo "LanguageTool server started at http://localhost:8081"
-
-      # Step 8: Ensure LanguageTool server is running after restart
-      - name: Ensure LanguageTool server is running
-        run: |
-          curl -s http://localhost:8081/v2/check || exit 1
-
-      # Step 9: Test uninstall-languagetool.sh script
+      # Step 8: Test uninstall-languagetool.sh script
       - name: Test uninstall-languagetool.sh script
         run: |
           chmod +x ./uninstall-languagetool.sh
-          ./uninstall-languagetool.sh --force
+          ./uninstall-languagetool.sh --force --yes
 
-      # Step 10: Clean up leftovers
-      - name: Clean up leftovers
+      # Step 9: Verify uninstallation
+      - name: Verify uninstallation
         run: |
+          # Check if installation directory was removed
+          if [ -d "$HOME/.languagetool" ]; then
+            echo "❌ ERROR: Installation directory still exists"
+            exit 1
+          else
+            echo "✅ Installation directory successfully removed"
+          fi
+
+          # Check if service configuration was removed
+          if [ -f "$HOME/Library/LaunchAgents/org.languagetool.server.plist" ]; then
+            echo "❌ ERROR: Service configuration still exists"
+            exit 1
+          else
+            echo "✅ Service configuration successfully removed"
+          fi
+
+      # Step 10: Cleanup (always runs)
+      - name: Final cleanup
+        if: always()
+        run: |
+          # Stop any running processes
+          pkill -f languagetool-server.jar 2>/dev/null || true
+
+          # Remove any leftover files
           rm -rf ~/.languagetool
           rm -f ~/Library/LaunchAgents/org.languagetool.server.plist
-          rm -f /tmp/languagetool.out /tmp/languagetool.err
-          rm -f /tmp/languagetool.log
-          echo "Cleaned up leftovers."
+          rm -f /tmp/languagetool.out /tmp/languagetool.err /tmp/languagetool.log
+
+          echo "Final cleanup complete."
